--- a/blog/style/regastyle.css
+++ b/blog/style/regastyle.css
@@ -1,12 +1,9 @@
 body {
-	background-image: url(../img/sketch.jpg);
 	margin: 0;
 	padding: 0;
 	font-family: 'Fira Sans', sans-serif;
-	background-image: url(../img/sketch.jpg);
-	-webkit-background-size: 100%;
-	     -o-background-size: 100%;
-	        background-size: 100%;
+	background: url(../img/sketch.jpg) no-repeat center center fixed;
+    background-size: cover;
 }
 .reg {
 	width: 416px;
@@ -63,4 +60,9 @@ body {
 }
 .reg input[type = "submit"]:hover {
 	background: #fbc531;
+}
+.reg a {
+	font-size: 13px;
+	color: white;
+	text-decoration: none;
 }
