Default Changelist выбрасываем статтьи добавил заголовок переместил html включил в проект js работа с 404 и со стилями
получили куки и проверили в js
personalCabinet

--- a/blog/style/personalCabinet.css
+++ b/blog/style/personalCabinet.css
@@ -1,3 +1,13 @@
 .info-user{
     border: 2px solid green;
+
+}
+.messages{
+    width: 100%;
+    border: 2px solid green;
+
+}
+.messages img{
+    width: 30px;
+
 }
