--- a/blog/style/page_two.css
+++ b/blog/style/page_two.css
@@ -5,8 +5,15 @@
 	overflow: hidden;
 }
 body {
-	background: url(../img/sketch.jpg) no-repeat center center fixed;
-    background-size: cover;
+	background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+	            linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+	            linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+	            linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+	            linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+	            linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+	background-size: 20px 20px;
+	background-color: #131313;
+	font-family: 'Raleway', sans-serif;
 }
 
 header {
@@ -93,7 +100,6 @@ background: rgba(112, 158, 152, 0.48);
 
 	}
 	.message p{
-		font-family: 'Garamond', arial;
 		font-size: 24px;
 		color: white;
 		font-family: monospace;
