Default Changelist выбрасываем статтьи добавил заголовок переместил html включил в проект js работа с 404 и со стилями
получили куки и проверили в js
personalCabinet

--- a/blog/style/loginstyle.css
+++ b/blog/style/loginstyle.css
@@ -62,3 +62,11 @@ body {
 .box input[type = "submit"]:hover {
 	background: #fbc531;
 }
+.box a {
+	font-weight: 300;
+	color: white;
+	text-decoration: none;
+}
+.box a:hover {
+	color: #fbc531;
+}
