--- a/blog/style/rostyk.css
+++ b/blog/style/rostyk.css
@@ -5,7 +5,7 @@
 	overflow: hidden;
 }
 body {
-	background: url(../img/sketch.jpg) no-repeat center center fixed;
+	/*background: url(../img/sketch.jpg) no-repeat center center fixed;*/
     background-size: cover;
 }
 
