--- a/11home/style.css
+++ b/11home/style.css
@@ -49,7 +49,10 @@ header {
                 /*    position: absolute;*/
                 /*}*/
             .data-user{
-                border: 1px solid #ff1d17;
+                border-radius: 5px;
+                box-shadow: 5px 0 10px #000;
+
+                border: 1px solid #fffefd;
                 margin-left: 30px;
                 margin-right: 3px;
                 overflow: hidden;
@@ -64,6 +67,9 @@ header {
         width: 80%;
         height: 80%;
         border: 2px solid black;
+    }
+    .right-bar .data-user{
+        background: whitesmoke;
     }
 
     .down-bar {
