--- a/13chat/admin-panel/css/style.css
+++ b/13chat/admin-panel/css/style.css
@@ -29,6 +29,22 @@ header a.btn {
 	background: #ceceee;
 
 }
+.go-in{
+	padding-top: 72px;
+	width: 200px;
+	height: 100px;
+	background: green;
+	position: absolute;
+	top: 50%;
+	left: 45%;
+	text-align: center;
+	color: whitesmoke;
+}
+.go-in:hover{
+	background: #00b415;
+
+}
+
 .btn {
 	border: 1px solid #673ab7;
 	background: #ceceee;
@@ -40,7 +56,14 @@ header a.btn {
 	width: 800px;
 	margin: 0 auto;
 }
-
+.edit-message{
+	width: 400px;
+	background: #4CAF50;
+	padding: 30px;
+	margin: 104px;
+	border-radius: 15px;
+	box-shadow: 8px 6px 10px rgba(0,0,0,0.25);
+}
 
 #customers {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
@@ -65,3 +88,22 @@ header a.btn {
   color: white;
 }
 /*body chat	*/
+footer{
+	color: whitesmoke;
+	position: absolute;
+	bottom: 15px;
+	width: 100%;
+	background: #3b7688;
+}
+@font-face {
+	font-family: Aladdin; /* Имя шрифта */
+	src: url('Aladdin.ttf'); /* Путь к файлу со шрифтом */
+}
+footer p{
+	margin-left: 100px;
+	font-family:'Aladdin';
+font-size: 15pt;
+}
+footer div{
+	margin-left: 100px;
+}
