--- a/15Home/chatApp/platforms/browser/www/css/style.css
+++ b/15Home/chatApp/platforms/browser/www/css/style.css
@@ -173,3 +173,51 @@ body {
     display: flex;
     flex-direction: column;
 }
+.popup{
+    position: absolute;
+    width: 99%;
+    height: 300px;
+    border: 1px solid red;
+    display: block;
+    /* left: 45%; */
+    background: #ececec;
+    top: 21%;
+}
+.popup label{
+    margin-left: 45%;
+}
+.popup textarea{
+    height: 240px;
+}
+.popup a{
+
+    position: absolute;
+    right: 5px;
+
+    text-decoration: none;
+    outline: none;
+    display: inline-block;
+    width: 140px;
+    height: 45px;
+    line-height: 45px;
+    border-radius: 45px;
+    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 3px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0,0,0,.1);
+    transition: .3s;
+
+}
+.popup a:hover{
+
+    background: #2EE59D;
+    box-shadow: 0 15px 20px rgba(46,229,157,.4);
+    color: white;
+    transform: translateY(-7px);
+}
