--- a/17Home/src/style/main.scss
+++ b/17Home/src/style/main.scss
@@ -1,6 +1,8 @@
-body{
-  margin:0;
-  .page{
-    width:100px;
-  }
+@import "setings.scss";
+
+header{
+  width: 100%;
+  height: 280px;
+  background-image: $headerBacground;
+  
 }
