--- a/17Home/src/style/_setings.scss
+++ b/17Home/src/style/_setings.scss
@@ -11,6 +11,7 @@ $headerBacground: url("./../../build/static/head.png");
 $generalThumb: url('./../../build/static/thumb.png');
 $lowThumb: url('./../../build/static/lowThumb.png');
 $heightThumb: url('./../../build/static/heightThumb.png');
+$imageNews: url('./../../build/static/imageNews.png');
 
 %flex {
 
